istio-gloo-portal-quickstart/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: petstore
spec:
  host: petstore
